[gd_scene load_steps=2 format=3 uid="uid://356gg3vsvx7x"]

[ext_resource type="Script" path="res://src/menus/MainMenu.gd" id="1_8fn6f"]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_8fn6f")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
offset_top = 240.0
offset_right = 296.0
offset_bottom = 288.0
theme_override_font_sizes/font_size = 32
text = "Sealth Game Demo"

[node name="StartButton" type="Button" parent="VBoxContainer"]
offset_top = 292.0
offset_right = 296.0
offset_bottom = 328.0
theme_override_constants/outline_size = 0
theme_override_font_sizes/font_size = 20
text = "Load Tutorial"

[node name="CreditsButton" type="Button" parent="VBoxContainer"]
offset_top = 332.0
offset_right = 296.0
offset_bottom = 368.0
theme_override_constants/outline_size = 0
theme_override_font_sizes/font_size = 20
text = "Credits"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
offset_top = 372.0
offset_right = 296.0
offset_bottom = 408.0
theme_override_font_sizes/font_size = 20
text = "Quit"

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
